// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the ToastContainer Component correctly 1`] = `
<div
  className="sc-gqjmRU fambvP"
>
  <div
    className="sc-VigVT gEggXm sc-gZMcBi kiNSap"
  >
    <div
      className="sc-jTzLTM cIqDPQ sc-gZMcBi geCnFd"
      color="success"
    >
      <i
        className="material-icons  sc-iwsKbI hPAJbp"
        color="white"
        scale="l"
      >
        check_circle
      </i>
    </div>
    <div
      className="sc-fjdhpX gjUKMb sc-gZMcBi dMgmPi"
    >
      Text
    </div>
    <div
      className="sc-jzJRlG gMTKEy sc-gZMcBi cwLibs"
    >
      <div
        className="sc-cSHVUG dcIrb"
      >
        <button
          className="sc-kAzzGY dvWRck"
          onClick={[Function]}
        >
          <i
            className="material-icons  sc-iwsKbI iNORPb"
            color={undefined}
            scale={undefined}
          >
            close
          </i>
        </button>
      </div>
    </div>
  </div>
  <div
    className="sc-VigVT gEggXm sc-gZMcBi kiNSap"
  >
    <div
      className="sc-jTzLTM jGbBoD sc-gZMcBi geCnFd"
      color="error"
    >
      <i
        className="material-icons  sc-iwsKbI hPAJbp"
        color="white"
        scale="l"
      >
        error_outline
      </i>
    </div>
    <div
      className="sc-fjdhpX gjUKMb sc-gZMcBi dMgmPi"
    >
      Text
    </div>
    <div
      className="sc-jzJRlG gMTKEy sc-gZMcBi cwLibs"
    >
      <div
        className="sc-cSHVUG dcIrb"
      >
        <button
          className="sc-kAzzGY dvWRck"
          onClick={[Function]}
        >
          <i
            className="material-icons  sc-iwsKbI iNORPb"
            color={undefined}
            scale={undefined}
          >
            close
          </i>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the ToastContainer Component correctly 2`] = `
<div
  className="sc-gqjmRU huZLmD"
>
  <div
    className="sc-VigVT gEggXm sc-gZMcBi kiNSap"
  >
    <div
      className="sc-jTzLTM cIqDPQ sc-gZMcBi geCnFd"
      color="success"
    >
      <i
        className="material-icons  sc-iwsKbI hPAJbp"
        color="white"
        scale="l"
      >
        check_circle
      </i>
    </div>
    <div
      className="sc-fjdhpX gjUKMb sc-gZMcBi dMgmPi"
    >
      Text
    </div>
    <div
      className="sc-jzJRlG gMTKEy sc-gZMcBi cwLibs"
    >
      <div
        className="sc-cSHVUG dcIrb"
      >
        <button
          className="sc-kAzzGY dvWRck"
          onClick={[Function]}
        >
          <i
            className="material-icons  sc-iwsKbI iNORPb"
            color={undefined}
            scale={undefined}
          >
            close
          </i>
        </button>
      </div>
    </div>
  </div>
  <div
    className="sc-VigVT gEggXm sc-gZMcBi kiNSap"
  >
    <div
      className="sc-jTzLTM jGbBoD sc-gZMcBi geCnFd"
      color="error"
    >
      <i
        className="material-icons  sc-iwsKbI hPAJbp"
        color="white"
        scale="l"
      >
        error_outline
      </i>
    </div>
    <div
      className="sc-fjdhpX gjUKMb sc-gZMcBi dMgmPi"
    >
      Text
    </div>
    <div
      className="sc-jzJRlG gMTKEy sc-gZMcBi cwLibs"
    >
      <div
        className="sc-cSHVUG dcIrb"
      >
        <button
          className="sc-kAzzGY dvWRck"
          onClick={[Function]}
        >
          <i
            className="material-icons  sc-iwsKbI iNORPb"
            color={undefined}
            scale={undefined}
          >
            close
          </i>
        </button>
      </div>
    </div>
  </div>
</div>
`;
